[project]
name = "producthunt-daily-hot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.11.0",
    "openai>=1.0.0",
    "python-dotenv>=0.20.0",
    "pytz>=2022.1",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]
